# PhysicsEngineWeekend

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: intersections.h  main.cpp  physics_body.h  physics_sim_parameters.h  physics_world.cpp  physics_world.h  utils.h
src/render/: camera.h  gl_shaders.h  mesh.cpp  mesh.h
